# tracecraft

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml  release.yml  test.yml
benchmarks/: README.md  build_report.py  contention_bench.py  contention_report.html  messaging_bench.py  report_template.py  results_hf.jsonl  results_messaging.jsonl  results_s3.jsonl  results_stagger.jsonl  results_timeline.jsonl  test_contention_bench.py
docs/: CI_CD_GUIDE.md  s3-architecture.md  session-mirror.md
examples/claude-code/: CLAUDE.md
examples/hermes-agent/: SKILL.md
plans/: TRACES_V1_PLAN.md  tracecraft-blueprint-v2.md  tracecraft-blueprint.md
plans/research/: GNOSIS_PIVOT_BLUEPRINT.md  GNOSIS_TRACK_PIVOT_REPORT.md
plans/server-archive/: README.md
plans/server-archive/tracecraft_server/core/: config.py
sdk/: README.md  pyproject.toml
sdk/tests/: test_coordination.py  test_handoff_v2.py  test_harness.py  test_hf_onboarding.py  test_messaging.py  test_session_cli.py  test_tier_0.py
sdk/tracecraft/: __init__.py  config.py  hf.py  redact.py  s3.py  store.py
sdk/tracecraft/cli/: __init__.py  agents.py  artifacts.py  init_cmd.py  memory.py  messages.py  session.py  steps.py
sdk/tracecraft/harness/: __init__.py  base.py  claude_code.py  codex.py  hermes.py  openclaw.py
server/: pyproject.toml
server/tracecraft_server/: main.py
server/tracecraft_server/core/: security.py
server/tracecraft_server/storage/: buckets.py  seaweed.py
