[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracecraft-ai"
version = "0.1.6"
description = "Coordination layer for multi-agent AI systems. Bring your own S3 / HuggingFace bucket; shared memory, mailbox, atomic task claims, handoffs, artifacts — no server, no database."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agents", "multi-agent", "experiment-tracking", "coordination", "observability"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "moto[s3]>=5.0",
]
huggingface = ["huggingface_hub>=1.5.0"]

[project.scripts]
tracecraft = "tracecraft.cli:main"

[project.urls]
Homepage = "https://github.com/Arrmlet/tracecraft"
Documentation = "https://github.com/Arrmlet/tracecraft#readme"
Repository = "https://github.com/Arrmlet/tracecraft"
Issues = "https://github.com/Arrmlet/tracecraft/issues"
Changelog = "https://github.com/Arrmlet/tracecraft/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["tracecraft*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
